# garrinator2021

./: README.md
Garrinator/: README.md
Garrinator/description/: package.xml
Garrinator/description/launch/: display.launch
Garrinator/description/macros/: base.xacro  rim.xacro  roller.xacro
Garrinator/description/mesh/: rubberwheel.stl
Garrinator/description/rviz/: description.rviz
Garrinator/garri_teleop/: CMakeLists.txt  package.xml
Garrinator/garri_teleop/launch/: robot_joy.launch
Garrinator/garri_teleop/src/: robot_teleop_joy.cpp
Garrinator/hardware_interface/: CMakeLists.txt  package.xml
Garrinator/hardware_interface/config/: controllers.yaml
Garrinator/hardware_interface/include/: odrive_hw_if.h
Garrinator/hardware_interface/launch/: hw_if.launch
Garrinator/hardware_interface/src/: hw_if_node.cpp  odrive_hw_if.cpp  odrive_hw_if.cpp.save
Garrinator/omni4_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
Garrinator/omni4_controller/config/: omni4_controller.yaml
Garrinator/omni4_controller/include/: omni4_controller.h
Garrinator/omni4_controller/launch/: omni4_controller.launch
Garrinator/omni4_controller/src/: omni4_controller.cpp
prova1/: CMakeLists.txt  package.xml
prova1/launch/: lector.launch  primer_node.launch
prova1/src/: lector.py  primer_node.py  primer_node_millora.py  primer_node_millora_sequencia.py  test.py
